# lit-rules-nodejs-repro

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  package-lock.json  package.json  tsconfig.json
src/: index_project.ts
tools/: bazel_deps.bzl
