load(
    "@npm//@bazel/typescript:index.bzl",
    "ts_config",
    "ts_library",
    "ts_project",
)

exports_files([
    "tsconfig.json",
])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

ts_project(
    name = "project",
    srcs = ["src/index_project.ts"],
    composite = True,
    declaration = True,
    declaration_map = True,
    source_map = True,
    tsconfig = ":tsconfig",
    deps = [
        "@npm//lit",
        "@npm//lit-element",
        "@npm//lit-html",
        "@npm//tslib",
    ],
)

ts_library(
    name = "library",
    srcs = ["src/index_library.ts"],
    tsconfig = ":tsconfig",
    deps = [
        "@npm//lit",
        "@npm//lit-element",
        "@npm//lit-html",
        "@npm//tslib",
    ],
)
